--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page - Gamifythink</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TOPWAW</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Rubik+Mono+One&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
+
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="CSS/style.css">
-    <script src="JS/index.js" defer></script>
-    
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </head>
 <body>
-    <div style="background-image: url(./asset/pattern\ 1.svg); margin-top:-50px;" >
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
-            <a class="navbar-brand ml-4 my-1" href="#">
-                <img id="brand-logo" src="./assets/logo.svg" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<nav id="navbar" class="navbar navbar-expand-lg navbar-primary fixed-top" style="background: #000000;">
+    <a class="navbar-brand ml-4 my-1" href="#">
+        <p class="my-1" style="font-weight: 500; color: #fff;">MA2011 TOPIK WAWASAN MATEMATIKA</p>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto mr-0 my-1">
-                    <li class="nav-item ml-3">
-                        <a class="btn btn-primary" href="login.html">Masuk</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto mr-0 my-1">
+            <li class="nav-item ml-3">
+                <a class="btn btn-primary" href="top.html">Klik aku</a>
+            </li>
+        </ul>
     </div>
+</nav>
+<div class="d-flex justify-content-center mt-5">
+    <div class="main">
+
+        <h1 class="mt-5">Hitung mundur tahun baru</h1>
+
+        <div class="mt-5 mb-5" id="countdown"></div>
+    </div>
+</div>
+
+
+    <script  src="function.js"></script>
+
 </body>
 </html>
