--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 <div class="d-flex justify-content-center mt-5">
-    <div class="main">
+    <div class="main mb-5">
 
         <h1 class="mt-5">Hitung mundur tahun baru</h1>
 
